--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "production:build": "npx prisma generate && npx prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@next/font": "^14.2.3",
     "@prisma/client": "^5.9.1",
     "@tailwindcss/forms": "^0.5.7",
     "animate.css": "^4.1.1",
